--- a/SistemaFacturacionSRI.Infrastructure/SistemaFacturacionSRI.Infrastructure.csproj
+++ b/SistemaFacturacionSRI.Infrastructure/SistemaFacturacionSRI.Infrastructure.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\SistemaFacturacionSRI.Domain\SistemaFacturacionSRI.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
