Add SRI electronic invoicing support
- Registered `FacturaElectronicaService` in DI container.
- Added `FirmaElectronica` config for signature path/password.
- Created migration `20251123173827_AjustesMiosFacturacion`:
  - Added columns to `ConfiguracionesSRI` for SRI compliance.
  - Seeded `Usuarios` table with default admin and vendor users.
- Introduced `FacturaSRI` model to map SRI XML schema.
- Implemented `ClaveAccesoService` for access key generation.
- Added `FacturaElectronicaService` for XML generation/signing.
- Enhanced `FacturaService` to integrate with SRI processes:
  - Generates and signs XML invoices.
  - Saves signed XML and access key in the database.
  - Ensures transactional integrity during invoice creation.
- Added `System.Security.Cryptography.Xml` for XML signing.
- Improved stock management logic (FIFO) in `FacturaService`.
- Updated `Estado` field in `Factura` to start as "Pendiente".

--- a/SistemaFacturacionSRI.API/appsettings.json
+++ b/SistemaFacturacionSRI.API/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "FirmaElectronica": {
+    "Ruta": "C:\\Ruta\\A\\Tu\\Firma\\archivo_firma.p12",
+    "Clave": "TuContrasenaDeFirma"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FacturaElectronicaDB": "Server=(localdb)\\mssqllocaldb;Database=FacturaElectronicaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
