Add SRI integration and electronic invoicing support
- Added services (`FacturaElectronicaService`, `ClaveAccesoService`, `SriSoapClient`) to support XML generation, signing, and SRI communication.
- Updated `appsettings.json` with new electronic signature configuration.
- Enhanced `Facturacion.razor` with success/error alerts for invoice processing.
- Extended `Factura` entity with SRI-related fields (`EstadoSRI`, `FechaAutorizacion`, `MensajeErrorSRI`).
- Created migration to update the `Facturas` table schema.
- Refactored `FacturaService` to handle SRI integration, including XML signing, sending, and response handling.
- Improved stock management with FIFO logic for product lots.
- Introduced `SriSoapClient` for SOAP communication with SRI endpoints.
- Ensured robust error handling and transaction management for data integrity.

--- a/SistemaFacturacionSRI.API/appsettings.json
+++ b/SistemaFacturacionSRI.API/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "FirmaElectronica": {
-    "Ruta": "C:\\Ruta\\A\\Tu\\Firma\\archivo_firma.p12",
-    "Clave": "TuContrasenaDeFirma"
+    "Ruta": "D:\\Cuarto Semestre\\Metodologias Agiles\\VINICIO MARCELO LAGUA TUBON 1803139037-181124115905 (3).p12",
+    "Clave": "Credil2023"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
