Update electronic signature configuration and refactor invoice generation logic

--- a/SistemaFacturacionSRI.API/appsettings.json
+++ b/SistemaFacturacionSRI.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "FirmaElectronica": {
-    "Ruta": "D:\\Cuarto Semestre\\Metodologias Agiles\\VINICIO MARCELO LAGUA TUBON 1803139037-181124115905 (3).p12",
+    "Ruta": "C:\\Users\\DELL\\Downloads\\VINICIO MARCELO LAGUA TUBON 1803139037-181124115905 (3).p12",
     "Clave": "Credil2023"
   },
   "AllowedHosts": "*",
