Implement dashboard reports and add CostoUnitario to DetalleFactura

--- a/SistemaFacturacionSRI.BlazorApp/SistemaFacturacionSRI.BlazorApp.csproj
+++ b/SistemaFacturacionSRI.BlazorApp/SistemaFacturacionSRI.BlazorApp.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazor-ApexCharts" Version="6.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SistemaFacturacionSRI.Domain\SistemaFacturacionSRI.Domain.csproj" />
   </ItemGroup>
 
