generacion del pdf y envio de factura al email

--- a/SistemaFacturacionSRI.API/appsettings.json
+++ b/SistemaFacturacionSRI.API/appsettings.json
@@ -12,5 +12,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FacturaElectronicaDB": "Server=(localdb)\\mssqllocaldb;Database=FacturaElectronicaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "Facturador",
+    "SenderEmail": "danielitolagua@gmail.com",
+    "Username": "danielitolagua@gmail.com",
+    "Password": "lqin uoci ztkd omiy"
   }
 }
