1.	Implementar Identity / BCrypt para asegurar las contraseñas y generar Tokens JWT en el Login.

--- a/SistemaFacturacionSRI.API/appsettings.json
+++ b/SistemaFacturacionSRI.API/appsettings.json
@@ -20,5 +20,10 @@
     "SenderEmail": "danielitolagua@gmail.com",
     "Username": "danielitolagua@gmail.com",
     "Password": "lqin uoci ztkd omiy"
+  },
+  "Jwt": {
+    "Key": "EstaEsUnaClaveSuperSecretaParaMiSistemaFacturacion123!",
+    "Issuer": "https://localhost:7000",
+    "Audience": "https://localhost:7000"
   }
 }
