--- a/SistemaFacturacionSRI.BlazorApp/SistemaFacturacionSRI.BlazorApp.csproj
+++ b/SistemaFacturacionSRI.BlazorApp/SistemaFacturacionSRI.BlazorApp.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Blazor-ApexCharts" Version="6.0.2" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
