--- a/SistemaFacturacionSRI.Infrastructure/SistemaFacturacionSRI.Infrastructure.csproj
+++ b/SistemaFacturacionSRI.Infrastructure/SistemaFacturacionSRI.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.21">
       <PrivateAssets>all</PrivateAssets>
