--- a/SistemaFacturacionSRI.Infrastructure/SistemaFacturacionSRI.Infrastructure.csproj
+++ b/SistemaFacturacionSRI.Infrastructure/SistemaFacturacionSRI.Infrastructure.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MimeKit" Version="4.14.0" />
+    <PackageReference Include="QRCoder" Version="1.7.0" />
     <PackageReference Include="QuestPDF" Version="2025.7.4" />
     <PackageReference Include="System.Security.Cryptography.Xml" Version="10.0.0" />
   </ItemGroup>
